# fokabot

./: .dockerignore  .drone.yml  .gitignore  Makefile  README.md  events.py  fokabot.py  pyproject.toml  requirements.txt
constants/: __init__.py  action.py  api_privileges.py  beatconnect.py  events.py  game_modes.py  misirlou_teams.py  mods.py  privileges.py  ranked_statuses.py  relax_modes.py  scoring_types.py  silence_units.py  slot_statuses.py  team_types.py  teams.py  tournament_state.py
internal_api/: handlers.py
plugins/: __init__.py  alert.py  beatmaps.py  faq.py  general.py  mod.py  multiplayer.py  pp.py  system.py  tournament.py
plugins/base/: __init__.py  filters.py  utils.py
plugins/tournament/: __init__.py  beatmaps.py  create.py  join_leave.py  rolls.py
pubsub/: __init__.py  manager.py
pubsub/handlers/: join_channel.py  message.py
singletons/: bot.py  config.py
utils/: autojson.py  beatconnect_api.py  beatmaps.py  cache.py  general.py  init_hook.py  letsapi.py  misirlou.py  misirlouapi.py  np_storage.py  osuapi.py  periodic_tasks.py  privileges_cache.py  rippleapi.py  schema.py
ws/: client.py  messages.py
