[tool.poetry]
name = "fokabot"
version = "2.5.0"
description = "Ripple in-game chat bot"
authors = ["Giuseppe Guerra <nyo@ripple.moe>"]

[tool.poetry.dependencies]
python = ">=3.5 ^3.6.0"
uvloop = "0.12.1"
aiohttp = "3.5.4"
aiotinydb = "1.2.2"
async_timeout = ">=3.0.1"
ujson = "2.0.3"
aioredis = "1.2.0"
schema = "0.6.8"
python-decouple = "3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
